--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <title>GeoJSON Map</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="viz-codelab.css" />
 </head>
 <body>
   <div id="container">
     <svg id="geojsonMap"></svg>
   </div>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="visualization.js"></script>
+  <script src="viz-codelab.js"></script>
 </body>
 </html>
