--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>GeoJSON Map</title>
+   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="viz-codelab.css" />
 </head>
 <body>
